--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -13,3 +13,10 @@ session:
 
 services:
 	router: App\RouterFactory::createRouter
+
+extensions:
+	# add theese four lines
+	console: Kdyby\Console\DI\ConsoleExtension
+	events: Kdyby\Events\DI\EventsExtension
+	annotations: Kdyby\Annotations\DI\AnnotationsExtension
+	doctrine: Kdyby\Doctrine\DI\OrmExtension
