--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -15,10 +15,13 @@ services:
 	router: App\RouterFactory::createRouter
 	- App\Model\UserManager
 	- App\Repositories\UserRepository
+	- App\Repositories\TestRepository
+	- App\Repositories\QuestionRepository
 	- App\Forms\SignInFormFactory
+	- App\Forms\TestFormFactory
+	- App\Forms\QuestionFormFactory
 
 extensions:
-	# add theese four lines
 	console: Kdyby\Console\DI\ConsoleExtension
 	events: Kdyby\Events\DI\EventsExtension
 	annotations: Kdyby\Annotations\DI\AnnotationsExtension
