jendoduché procházení otázek uložení testu zobrazení jednoduchého výsledku

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -17,6 +17,7 @@ services:
 	- App\Repositories\UserRepository
 	- App\Repositories\TestRepository
 	- App\Repositories\QuestionRepository
+	- App\Repositories\ResultRepository
 	- App\Forms\SignInFormFactory
 	- App\Forms\TestFormFactory
 	- App\Forms\QuestionFormFactory
